--- a/app/src/main/res/_A0_seller/layout/layout_shop_search.xml
+++ b/app/src/main/res/_A0_seller/layout/layout_shop_search.xml
@@ -15,8 +15,8 @@
     android:dropDownWidth="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:nextFocusUp="@+id/search_box"
-    android:nextFocusLeft="@+id/search_box"
+    android:nextFocusUp="@+id/input_shop_searching"
+    android:nextFocusLeft="@+id/input_shop_searching"
     android:inputType="textAutoComplete|textAutoCorrect"
     android:popupBackground="@color/angel_white"
     android:textColor="@color/little_light_gray"
