--- a/app/src/main/res/_A0_seller/layout/view_seller_title.xml
+++ b/app/src/main/res/_A0_seller/layout/view_seller_title.xml
@@ -71,7 +71,7 @@
 
                 <!--android:padding="@dimen/round_padding"-->
 
-                <!--android:background="@color/dark_honest_green"-->
+                <!--android:shapxamplebackground="@color/dark_honest_green"-->
 
                 <!--android:id="@+id/option" />-->
 
