--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -10,7 +10,7 @@
       <!--android:layout_height="wrap_content"-->
       <!--android:padding="@dimen/schema_padding"-->
       <!--android:layout_marginBottom="@dimen/round_padding"-->
-      <!--android:background="@color/supreme_blue"-->
+      <!--android:shapxamplebackground="@color/supreme_blue"-->
       <!--android:id="@+id/layout_canvas_header">-->
 
       <!--<ImageButton-->
@@ -18,7 +18,7 @@
          <!--android:layout_height="24dp"-->
          <!--android:layout_centerVertical="true"-->
          <!--android:layout_marginEnd="@dimen/slice_align"-->
-         <!--android:background="@android:color/transparent"-->
+         <!--android:shapxamplebackground="@android:color/transparent"-->
          <!--android:src="@drawable/ic_arrow_back_36"-->
          <!--android:tint="@color/angel_white"-->
          <!--android:id="@+id/backPressedState"-->
@@ -56,7 +56,7 @@
              <!--android:layout_width="24dp"-->
              <!--android:layout_height="24dp"-->
              <!--android:gravity="center"-->
-             <!--android:background="@drawable/ic_clear_24"-->
+             <!--android:shapxamplebackground="@drawable/ic_clear_24"-->
              <!--android:id="@+id/btn_signature_clear"/>-->
       <!--</LinearLayout>-->
    <!--</RelativeLayout>-->
@@ -145,7 +145,7 @@
           <!--android:layout_alignParentEnd="true"-->
           <!--android:layout_centerInParent="true"-->
           <!--android:layout_marginEnd="@dimen/round_padding"-->
-          <!--android:background="@drawable/btn_shadow"/>-->
+          <!--android:shapxamplebackground="@drawable/btn_shadow"/>-->
 
          <!--<Button-->
             <!--android:layout_height="48dp"-->
@@ -155,7 +155,7 @@
             <!--android:layout_alignParentEnd="true"-->
             <!--android:layout_centerInParent="true"-->
             <!--android:layout_marginEnd="@dimen/round_padding"-->
-            <!--android:background="@drawable/icon_done_green_48"-->
+            <!--android:shapxamplebackground="@drawable/icon_done_green_48"-->
             <!--android:id="@+id/btn_signature_submit"/>-->
 
       <Button
