--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,6 +6,7 @@
     android:background="@color/shadow_gray"
     android:paddingStart="@dimen/round_padding"
     android:paddingEnd="@dimen/round_padding"
+    android:paddingBottom="@dimen/round_padding"
     tools:context="com.example.administrator.myapplication.UserActivity">
 
     <android.support.v7.widget.RecyclerView
