8/8/2560 patch 2.0 by atikom

--- a/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
+++ b/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content"
               android:background="@color/angel_white"
 
-              android:layout_marginBottom="@dimen/slice_align">
+              android:layout_margin="@dimen/slice_align">
 
    <ProgressBar
        android:layout_width="wrap_content"
