--- a/app/src/main/res/_A1_invoice/layout/view_invoice_info.xml
+++ b/app/src/main/res/_A1_invoice/layout/view_invoice_info.xml
@@ -19,7 +19,6 @@
         android:textColor="@color/stone_gray"
         android:textSize="@dimen/font_text_view"/>
 
-
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -43,6 +42,21 @@
         android:text="13 พฤศจิกายน 2559 20:39:53 น."
         android:textColor="@color/space_gray"
         android:textSize="@dimen/font_text_view"/>
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentEnd="true"
+
+       android:padding="@dimen/round_padding"
+
+       android:gravity="center"
+
+       android:id="@+id/text_view_invoice_box_number"
+
+       android:text="0/5"
+       android:textColor="@color/space_gray"
+       android:textSize="@dimen/font_text_view"/>
 
     <ImageButton
         android:layout_width="36dp"
