--- a/app/src/main/res/layout/activity_applied_search.xml
+++ b/app/src/main/res/layout/activity_applied_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,152 +7,156 @@
     android:layout_height="match_parent"
     tools:context="com.example.administrator.myapplication.AppliedSearchActivity"
 
-    android:weightSum="2"
     android:orientation="vertical"
 
-    android:background="@color/little_light_gray">
+    android:background="@color/shadow_gray">
 
-   <!--<android.support.v7.widget.CardView-->
-      <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-      <!--android:layout_width="match_parent"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_alignParentEnd="true"-->
-      <!--android:layout_centerInParent="true"-->
-
-      <!--android:layout_weight="1"-->
-      <!--android:layout_margin="@dimen/half_little"-->
-
-      <!--card_view:cardCornerRadius="0dp"-->
-      <!--card_view:cardElevation="@dimen/slice_align"-->
-      <!--card_view:cardPreventCornerOverlap="false"-->
-      <!--card_view:cardBackgroundColor="@android:color/transparent">-->
-
-      <RelativeLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-
-          android:layout_weight="1"
-
-          android:orientation="vertical"
-          android:gravity="center_vertical"
-
-          android:background="@color/little_light_gray">
-
-         <TextView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-
-             android:gravity="center"
-
-             android:id="@+id/text_view_bill_header"
-
-             android:text="ค้นหาโดยหมายเลขบิลล์"
-             android:textColor="@color/space_gray"
-             android:textSize="@dimen/font_app_name"/>
-
-         <EditText
-             android:layout_below="@+id/text_view_bill_header"
-
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-
-             android:layout_margin="@dimen/half_little"
-             android:padding="@dimen/half_little"
-
-             android:background="@color/dark_blue"
-
-             android:hint="หมายเลขบิลล์ หรือคำขึ้นต้น"
-             android:textSize="@dimen/font_text_view"
-             android:textColor="@color/angel_white"
-             android:textColorHint="@color/angel_white"
-
-             android:id="@+id/edit_text_bill_search"
-
-             android:gravity="center"
-
-             android:drawableEnd="@drawable/ic_search_black_24dp"/>
-
-         <!--</android.support.v7.widget.CardView>-->
-      </RelativeLayout>
-   <!--</android.support.v7.widget.CardView>-->
-
-   <RelativeLayout
+   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:orientation="vertical"
 
-       android:layout_weight="1"
-       android:gravity="top|center"
+       android:paddingStart="@dimen/round_padding"
+       android:paddingEnd="@dimen/round_padding"
+       android:paddingTop="@dimen/half_little"
 
-       android:background="@color/supreme_blue">
+       android:id="@+id/main_article">
 
-
-      <TextView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-
-         android:gravity="center"
-
-         android:id="@+id/text_view_invoice_search_date_header"
-
-         android:text="\nค้นหาโดยวันที่"
-         android:textColor="@color/dark_blue"
-         android:textSize="@dimen/font_app_name"/>
-
-      <!--<android.support.v7.widget.CardView-->
-          <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:layout_alignParentEnd="true"-->
-          <!--android:layout_centerInParent="true"-->
-          <!--card_view:cardCornerRadius="0dp"-->
-          <!--card_view:cardElevation="@dimen/slice_align"-->
-          <!--card_view:cardPreventCornerOverlap="false"-->
-          <!--card_view:cardBackgroundColor="@android:color/transparent">-->
-
-         <TextView
-            android:layout_below="@+id/text_view_invoice_search_date_header"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:padding="@dimen/half_little"
-
-            android:layout_margin="@dimen/round_padding"
-
-            android:background="@color/dark_blue"
-
-            android:hint="ค้นหาโดย วัน/เดือน/ปี"
-            android:textSize="@dimen/font_text_view"
-            android:textColor="@color/angel_white"
-            android:textColorHint="@color/angel_white"
-
-            android:gravity="center"
-
-            android:id="@+id/edit_text_date_picker"
-
-            android:drawableEnd="@drawable/ic_search_black_24dp"/>
-
-      <Button
-          android:layout_width="wrap_content"
+      <LinearLayout
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:padding="@dimen/round_padding"
+          android:background="@color/angel_white">
 
-          android:layout_below="@+id/edit_text_date_picker"
-          android:layout_alignParentEnd="true"
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
 
-          android:layout_margin="@dimen/round_padding"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-          android:id="@+id/button_submit"
+                android:gravity="start"
 
-          android:gravity="center"
-          android:text="ค้นหา"
+                android:padding="@dimen/half_little"
 
-          android:textColor="@color/angel_white"
-          android:textSize="@dimen/font_text_view"
+                android:text="ค้นหาโดยหมายเลขบิลล์"
+                android:textColor="@color/space_gray"
+                android:textSize="@dimen/font_text_view"/>
+         </RelativeLayout>
 
-          android:background="@android:color/transparent"
-          style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+         <android.support.v7.widget.CardView
+             xmlns:card_view="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_centerInParent="true"
 
-      <!--</android.support.v7.widget.CardView>-->
-   </RelativeLayout>
+             card_view:cardCornerRadius="0dp"
+             card_view:cardElevation="@dimen/slice_align"
+             card_view:cardPreventCornerOverlap="false"
+             card_view:cardBackgroundColor="@android:color/transparent">
 
-</LinearLayout>
+            <EditText
+                android:layout_below="@+id/text_view_bill_header"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:padding="@dimen/half_little"
+
+                android:background="@color/lemon_light_fortune"
+
+                android:hint="หมายเลขบิลล์ หรือคำขึ้นต้น"
+                android:textSize="@dimen/font_text_view"
+                android:textColor="@color/angel_white"
+                android:textColorHint="@color/lemon_inside_text"
+
+                android:id="@+id/edit_text_bill_search"
+
+                android:gravity="center"
+
+                android:drawableEnd="@drawable/ic_search_black_24dp"/>
+         </android.support.v7.widget.CardView>
+      </LinearLayout>
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/half_little"
+          android:orientation="vertical"
+          android:padding="@dimen/round_padding"
+          android:background="@color/angel_white">
+
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:gravity="start"
+
+                android:padding="@dimen/half_little"
+
+                android:text="ค้นหาโดยวันที่"
+                android:textColor="@color/space_gray"
+                android:textSize="@dimen/font_text_view"/>
+         </RelativeLayout>
+
+         <android.support.v7.widget.CardView
+             xmlns:card_view="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_centerInParent="true"
+
+             card_view:cardCornerRadius="0dp"
+             card_view:cardElevation="@dimen/slice_align"
+             card_view:cardPreventCornerOverlap="false"
+             card_view:cardBackgroundColor="@android:color/transparent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:padding="@dimen/half_little"
+
+                android:background="@color/supreme_blue"
+
+                android:hint="กดเพื่อเลือกวันที่ (วัน/เดือน/ปี)"
+                android:textSize="@dimen/font_text_view"
+                android:textColor="@color/angel_white"
+                android:textColorHint="@color/supreme_blue_inside_text"
+
+                android:gravity="center"
+
+                android:id="@+id/edit_text_date_picker"
+
+                android:drawableEnd="@drawable/ic_search_black_24dp"/>
+         </android.support.v7.widget.CardView>
+      </LinearLayout>
+   </LinearLayout>
+
+   <Button
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+
+       android:layout_below="@+id/main_article"
+
+       android:layout_alignParentEnd="true"
+
+       android:layout_marginTop="@dimen/half_little"
+
+       android:id="@+id/button_submit"
+
+       android:gravity="center"
+       android:text="ค้นหา"
+
+       android:textColor="@color/supreme_blue"
+       android:textSize="@dimen/font_text_view"
+
+       android:background="@android:color/transparent"
+       style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+
+</RelativeLayout>
