--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorWhite">#FFFFFF</color>
 
     <color name="funny_dark_pink">#d94e6d</color>
+    <color name="funny_soft_pink">#ec899f</color>
     <color name="soft_red">#ef4c43</color>
     <color name="deepest_orange">#ff5820</color>
     <color name="seasonal_orange">#ffc73c</color>
@@ -23,6 +24,7 @@
     <color name="supreme_blue">#0e76bd</color>
     <color name="premier_blue">#0e76bd</color>
     <color name="dark_blue">#0b5b91</color>
+    <color name="supreme_blue_inside_text">#073554</color>
 
     <color name="jet_black">#222222</color>
     <color name="solid_gray">#6e6e6e</color>
@@ -44,6 +46,7 @@
     <color name="lemon_light_fortune">#74b598</color>
     <color name="lemon_wingless">#60ab89</color>
     <color name="lemon_resonance_structure">#4ca07a</color>
+    <color name="lemon_inside_text">#247450</color>
 
     <!-- Rose destruction -->
 
