--- a/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
+++ b/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/angel_white"
+              android:background="@android:color/transparent"
 
               android:layout_margin="@dimen/slice_align">
 
