--- a/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
+++ b/app/src/main/res/_R0_environment/layout/layout_progressbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -10,10 +10,13 @@
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+
+       android:layout_centerInParent="true"
+
        android:padding="@dimen/round_padding"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        style="@android:style/Widget.Holo.ProgressBar"
        android:layout_gravity="center_horizontal"/>
 
-</LinearLayout>
+</RelativeLayout>
