--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -2,64 +2,8 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/like_a_blck"
+    android:background="@color/little_light_gray"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-   <!--<RelativeLayout-->
-      <!--android:layout_width="match_parent"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:padding="@dimen/schema_padding"-->
-      <!--android:layout_marginBottom="@dimen/round_padding"-->
-      <!--android:shapxamplebackground="@color/supreme_blue"-->
-      <!--android:id="@+id/layout_canvas_header">-->
-
-      <!--<ImageButton-->
-         <!--android:layout_width="24dp"-->
-         <!--android:layout_height="24dp"-->
-         <!--android:layout_centerVertical="true"-->
-         <!--android:layout_marginEnd="@dimen/slice_align"-->
-         <!--android:shapxamplebackground="@android:color/transparent"-->
-         <!--android:src="@drawable/ic_arrow_back_36"-->
-         <!--android:tint="@color/angel_white"-->
-         <!--android:id="@+id/backPressedState"-->
-         <!--style="@style/Base.Widget.AppCompat.Button.Borderless"/>-->
-
-      <!--<TextView-->
-         <!--android:layout_width="match_parent"-->
-         <!--android:layout_height="wrap_content"-->
-         <!--android:layout_toEndOf="@+id/backPressedState"-->
-         <!--android:layout_centerVertical="true"-->
-         <!--android:layout_marginStart="@dimen/double_round"-->
-         <!--android:gravity="left|center"-->
-         <!--android:text="กรุณาเซ็นต์ชื่อผู้รับ ในพื้นว่างด้านล่าง"-->
-         <!--android:textColor="@color/angel_white"-->
-         <!--android:textSize="@dimen/font_app_name"/>-->
-
-      <!--<LinearLayout-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:orientation="horizontal"-->
-          <!--android:gravity="center"-->
-          <!--android:layout_alignParentRight="true"-->
-          <!--android:layout_centerInParent="true">-->
-
-         <!--<TextView-->
-             <!--android:layout_width="wrap_content"-->
-             <!--android:layout_height="match_parent"-->
-             <!--android:layout_gravity="center_horizontal"-->
-             <!--android:gravity="center"-->
-             <!--android:layout_marginEnd="@dimen/round_padding"-->
-             <!--android:text="(วาดใหม่)"-->
-             <!--android:textColor="@color/angel_white"-->
-             <!--android:textSize="@dimen/font_text_view"/>-->
-         <!--<Button-->
-             <!--android:layout_width="24dp"-->
-             <!--android:layout_height="24dp"-->
-             <!--android:gravity="center"-->
-             <!--android:shapxamplebackground="@drawable/ic_clear_24"-->
-             <!--android:id="@+id/btn_signature_clear"/>-->
-      <!--</LinearLayout>-->
-   <!--</RelativeLayout>-->
 
    <LinearLayout
       android:layout_width="wrap_content"
@@ -81,6 +25,7 @@
          <Button
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginTop="1dp"
             android:gravity="center"
             android:background="@drawable/ic_clear_24"
             android:id="@+id/btn_signature_clear"/>
@@ -91,8 +36,7 @@
       android:layout_width="match_parent"
       android:clipChildren="false"
       android:layout_marginTop="@dimen/round_padding"
-      android:layout_marginStart="@dimen/round_padding"
-      android:layout_marginEnd="@dimen/round_padding"
+
       android:layout_above="@+id/layout_canvas_footer"
       android:background="@color/angel_white"
       android:id="@+id/linearLayout"
@@ -103,21 +47,25 @@
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_alignParentBottom="true"
-      android:layout_marginTop="@dimen/round_padding"
-      android:layout_marginStart="@dimen/round_padding"
-      android:layout_marginBottom="@dimen/round_padding"
+      android:layout_marginTop="@dimen/slice_align"
+
       android:layout_marginEnd="@dimen/round_padding"
-      android:background="@color/angel_white"
+
       android:id="@+id/layout_canvas_footer">
 
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+
+          android:paddingTop="@dimen/slice_align"
+
+          android:layout_toStartOf="@+id/btn_signature_submit"
+
           android:layout_marginStart="@dimen/slice_align">
          <EditText
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:layout_marginEnd="125dp"
+
              android:id="@+id/input_user_fullname"
              android:inputType="text"
              android:hint="พิมพ์ชื่อของท่าน (ผู้รับ)"
@@ -126,60 +74,22 @@
              android:textColorHint="@color/space_gray"/>
       </android.support.design.widget.TextInputLayout>
 
-      <android.support.v7.widget.CardView
-         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-         android:layout_height="wrap_content"
-         android:layout_width="wrap_content"
-         android:layout_alignParentEnd="true"
-         android:layout_centerInParent="true"
-         android:layout_marginEnd="@dimen/slice_align"
-         card_view:cardCornerRadius="0dp"
-         card_view:cardElevation="@dimen/slice_align"
-         card_view:cardPreventCornerOverlap="false"
-         card_view:cardBackgroundColor="@android:color/transparent">
-
-         <!--<Button-->
-          <!--android:layout_height="55dp"-->
-          <!--android:layout_width="48dp"-->
-
-          <!--android:layout_alignParentEnd="true"-->
-          <!--android:layout_centerInParent="true"-->
-          <!--android:layout_marginEnd="@dimen/round_padding"-->
-          <!--android:shapxamplebackground="@drawable/btn_shadow"/>-->
-
-         <!--<Button-->
-            <!--android:layout_height="48dp"-->
-            <!--android:layout_width="48dp"-->
-
-            <!--android:elevation="7dp"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:layout_marginEnd="@dimen/round_padding"-->
-            <!--android:shapxamplebackground="@drawable/icon_done_green_48"-->
-            <!--android:id="@+id/btn_signature_submit"/>-->
-
       <Button
          android:layout_height="wrap_content"
-         android:layout_width="105dp"
+         android:layout_width="wrap_content"
          android:text="บันทึก"
          android:textSize="@dimen/font_text_view"
-         android:textColor="@color/angel_white"
+         android:textColor="@color/rising_green"
 
-         android:background="@color/lemon_wingless"
+         android:gravity="center"
+
+         android:paddingStart="@dimen/round_padding"
+
+         android:layout_alignParentEnd="true"
+         android:layout_centerInParent="true"
+
+         android:background="@android:color/transparent"
          android:id="@+id/btn_signature_submit"/>
 
-
-      </android.support.v7.widget.CardView>
-
-      <!--<android.support.design.widget.FloatingActionButton-->
-          <!--android:id="@+id/btn_signature_submit"-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:layout_alignParentEnd="true"-->
-          <!--android:src="@drawable/ic_done_24_white_fixed"-->
-          <!--android:layout_margin="@dimen/fab_margin"  />-->
    </RelativeLayout>
-
-
-
 </RelativeLayout>
