11/09/2560 patch 2.0.1 by atikom

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="dark_blue">#0b5b91</color>
     <color name="supreme_blue_inside_text">#073554</color>
 
+    <!-- White Tone -->
     <color name="jet_black">#222222</color>
     <color name="solid_gray">#6e6e6e</color>
     <color name="space_gray">#949494</color>
