--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,5 +26,6 @@
    <dimen name="schema_padding">12dp</dimen>
    <dimen name="title_expanded">13dp</dimen>
    <dimen name="double_round">14dp</dimen>
+   <dimen name="primary_bound">18dp</dimen>
    <dimen name="gate_margin">42dp</dimen>
 </resources>
