14/09/2560 patch 2.0.1 by atikom

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,15 @@
     <style name="ApplicationTheme" parent="Theme.AppCompat.Light.NoActionBar">
       <item name="colorPrimary">@color/supreme_blue</item>
       <item name="colorPrimaryDark">@color/supreme_blue</item>
-      <item name="colorAccent">@color/lemon_wingless</item>
+      <item name="colorAccent">@color/stone_gray</item>
+
+       <!--<item name="android:textViewStyle">@style/RobotoTextViewStyle</item>-->
+       <!--<item name="android:buttonStyle">@style/RobotoTextViewStyle</item>-->
     </style>
+
+   <!--<style name="RobotoTextViewStyle" parent="android:Widget.TextView">-->
+      <!--<item name="android:fontFamily">@fonts</item>-->
+   <!--</style>-->
 
    <!-- สีไอคอนโฮมสีขาว-->
    <style name="CustomToolBarTheme" parent="ApplicationTheme">
