23/10/2560 Commit by Atikom use Bus + Firebase #2

--- a/app/src/main/res/_A1_bill_list/layout/activity_bill_list.xml
+++ b/app/src/main/res/_A1_bill_list/layout/activity_bill_list.xml
@@ -10,7 +10,6 @@
    <TextView
        android:layout_width="344dp"
        android:layout_height="551dp"
-       android:textAlignment="center"
-       android:text="@string/accept"/>
+       android:textAlignment="center"/>
 
 </android.support.constraint.ConstraintLayout>
